@@ -1,4 +1,4 @@
-obj-y := init.o
+obj-y := init.o init_32.o
 obj-y += fault.o
 obj-y += ioremap.o
 obj-y += pgtable.o
