@@ -575,5 +575,6 @@ Fri Feb 26 15:39:18 CST 2016
 
 
 Sat Feb 27 16:46:08 CST 2016
+- [+] arch/x86/mm/init_32.c
 - [M] arch/x86/include/asm/pgtable*.h		[D] Add various functions.
-- [D] include/asm-generic/pgtable.h
+- [M] include/asm-generic/pgtable.h
